changing BAM to handle the main-block as normal block inside BAM. The main-block was handled outside of BAM, so that the main-reachedset (of the main-cpa-algorithm) was not in BAMcache and not available in BAM as complete reachedset. Now the main-reachedset only contains the root-state (expanded initial-state), return-states of the main-method and (if available) error-states returned from BAM.
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/trunk@12928 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c